Register and Login connection finished