@@ -4,7 +4,6 @@ import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -17,7 +16,10 @@ import static com.project.vapes.model.UserPermission.ADMIN_UPDATE;
 @RequiredArgsConstructor
 public enum UserRole {
 
-    USER(Collections.emptySet()),
+    USER(
+            Set.of(
+                    ADMIN_READ,
+                    ADMIN_CREATE)),
     ADMIN(
             Set.of(
                     ADMIN_READ,
